# CBR

./: CMakeLists.txt  README.md  main.cpp
cifar-data/: cfarCNN.JSON
src/: ConvLayer.hpp  Dtype.hpp  FC.hpp  Layer.hpp  Math.hpp  NN.hpp  Pooling.hpp  SoftMax.hpp
